base/namespaces/ceph.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ceph

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: default-ingress
  namespace: ceph
spec:
  podSelector: {}
  ingress:
  - from:
    # Only allow ingress from K8S (admission controller)
    - ipBlock:
        cidr: "10.0.0.0/8"
  policyTypes:
  - Ingress

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: default-egress
  namespace: ceph
spec:
  podSelector: {}
  egress:
  - to:
    # Only allow egress to K8S and local lan
    - ipBlock:
        cidr: "10.0.0.0/8"
    - ipBlock:
        cidr: "192.168.0.0/16"
  policyTypes:
  - Egress
