base/namespaces/default.yaml
# apiVersion: v1
# kind: Namespace
# metadata:
#   name: default

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: default-ingress
  namespace: default
spec:
  podSelector: {}
  ingress:
  - from:
    # Only allow ingress from nginx
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: nginx
  - from:
    # Allow local and operator ingress to PostgreSQL
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: default
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: postgres
    ports:
    - protocol: TCP
      port: 5432
      endPort: 5432
    - protocol: TCP
      port: 8008 #Patroni
      endPort: 8008
  - from:
    # Allow local ingress to Redis
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: default
    ports:
    - protocol: TCP
      port: 6379
      endPort: 6379
  - from:
    # Allow from any IP
    - ipBlock:
        cidr: "0.0.0.0/0"
    # Allow access to Lora multiplyer
    ports:
    - protocol: UDP
      port: 1700 
      endPort: 1700
  - from:
    # Allow from any IP
    - ipBlock:
        cidr: "0.0.0.0/0"
    # Allow access to Daiking
    ports:
    - protocol: UDP
      port: 30000 
      endPort: 30000
  policyTypes:
  - Ingress

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: default-egress
  namespace: default
spec:
  podSelector: {}
  egress:
  - to:
    # Allow all egress
    - ipBlock:
        cidr: "0.0.0.0/0"

  policyTypes:
  - Egress
