base/namespaces/kubernetes-dashboard.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kubernetes-dashboard

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: default-ingress
  namespace: kubernetes-dashboard
spec:
  podSelector: {}
  ingress:
  - from:
    # Only allow ingress from nginx
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: nginx
  policyTypes:
  - Ingress

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: default-egress
  namespace: kubernetes-dashboard
spec:
  podSelector: {}
  egress:
  - to:
    # Only allow egress to K8S and local network
    - ipBlock:
        cidr: "10.0.0.0/8"
    - ipBlock:
        cidr: "192.0.0.0/8"
  policyTypes:
  - Egress
