base/namespaces/maddy.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: maddy
  labels:
    cert-manager: CLUSTER_DOMAIN_CERT

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: default-ingress
  namespace: maddy
spec:
  podSelector: {}
  ingress:
  - from:
    # Allow ingress from nginx
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: nginx
  - from:
    # Allow local ingress to PostgreSQL
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: maddy
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: postgres
    ports:
    - protocol: TCP
      port: 5432
      endPort: 5432
    - protocol: TCP
      port: 8008 #Patroni
      endPort: 8008
  - from:
    # Allow Internet access to mail server
    - ipBlock:
        cidr: 0.0.0.0/0
    ports:
    - protocol: TCP
      port: 25
      endPort: 25
    - protocol: TCP
      port: 2525
      endPort: 2525
    - protocol: TCP
      port: 143
      endPort: 143
    - protocol: TCP
      port: 993
      endPort: 993
    - protocol: TCP
      port: 587
      endPort: 587
    - protocol: TCP
      port: 465
      endPort: 465
  policyTypes:
  - Ingress

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: default-egress
  namespace: maddy
spec:
  podSelector: {}
  egress:
  - to:
    # allow outbound email
    - ipBlock:
        cidr: "0.0.0.0/0"
  policyTypes:
  - Egress
