base/namespaces/nginx.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nginx

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: default-ingress
  namespace: nginx
spec:
  podSelector: {}
  ingress:
  - from:
    # Allow all ingress (K8S ingress)
    - ipBlock:
        cidr: "0.0.0.0/0"
  policyTypes:
  - Ingress

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: default-egress
  namespace: nginx
spec:
  podSelector: {}
  egress:
  - to:
    # Allow egress to Internet (oauth)
    - ipBlock:
        cidr: "0.0.0.0/0"
  policyTypes:
  - Egress
