base/namespaces/postgres.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: postgres

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: default-ingress
  namespace: postgres
spec:
  podSelector: {}
  ingress:
  - from:
    # Only allow ingress from nginx and local
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: nginx
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: postgres
  policyTypes:
  - Ingress

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: default-egress
  namespace: postgres
spec:
  podSelector: {}
  egress:
  - to:
    # Only allow egress to K8S
    - ipBlock:
        cidr: "10.0.0.0/0"
  policyTypes:
  - Egress
