base/namespaces/rook-ceph.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rook-ceph

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: default-ingress
  namespace: rook-ceph
spec:
  podSelector: {}
  ingress: []
  policyTypes:
  - Ingress

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: default-egress
  namespace: rook-ceph
spec:
  podSelector: {}
  egress:
  - to:
    # Only allow egress to K8S
    - ipBlock:
        cidr: "10.0.0.0/8"
  policyTypes:
  - Egress
